--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style/style.css">
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
+    <script src="script2.js"></script>
+
 </head>
 <body>
     
