--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <script src="script.js"></script>
     <script src="script2.js"></script>
+    <script src="script3.js"></script>
 
 </head>
 <body>
